Changelog
------------

3.1.21
 ^ Environment Helper name typo fixed
 # Item Model fix: range empty values
 # Amazon S3 fixes for open_basedir or safe mode enabled servers
 # Installer lang issue fixed

3.1.20
 ^ ZLUX updated to 2.0.1
 ^ ItemModel performance improvements
 + Environment Helper compatibility with ZL Component Extension view
 # Minor bugs fixed

3.1.19
 # Fixed ZLUX 1 ItemsManager pagination/filtering

3.1.18
 + ZLUX 2.0
 + Request Helper
 + Lang strings
 ^ FilesManager: don't try to resize if no size params
 ^ ZL Menu Item field improved making no more necessary to "save twice"
 # Item Model bug fix
 # Minor bugs fixed

3.1.17
 ^ Plupload updated to v2.1.2
 ^ Bug fixes

3.1.16
 + jQuery Transit plugin
 + Lang strings
 # Fixed Item Model minor issue
 # Fixed issues with Filespro event when no present in Type
 ^ Removed ZL Installer ZOO dependency

3.1.15
 # ZLField WK compatibility fix
 + ZLUX Attributes field

3.1.14
 # Fixed issue introduced in previous release
 ^ ZLUX Dialog CSS cleanup
 ^ Dependencies check limited to backend

3.1.13
 + Resize on Upload
 ^ ZLStorage: limit resolution check to image files
 ^ Uikit assets updated

3.1.12
 ^ Plupload asset updated to v2.1.1
 # ZLUX ItemsManager and FilesManager minor bugs fixed
 # Applied tzoffset to ItemModel date filtering
 # ItemModel Published date filtering bug fixed

3.1.11
 + Added dedicated frontpage filter in the item model
 + Added asset Parsley
 + Added [zooitemalias] var for dynamic paths
 # Fixed missing S3 error notifications
 # Fixed range filtering with 0 values

3.1.10
 + ZL Installer
 + Datetime option for Item Model

3.1.9
 + Update Helper
 + Work on com_Zoolanders integration
 ^ ZLUX core improvements
 ^ ZLUX Fields new features

3.1.8
 # Install issues solved

3.1.7
 # Fixed issue with ZLField params saving

3.1.6
 # Minor fix in checkExt function
 # Fixed range filtering issue
 ^ Work on perfomance
 $ Lang strings added

3.1.5
 ^ Improved Dependencies check